# 2D

./: CMakeLists.txt  README.md  build.sh  compare_costs.sh  compare_results.sh  expt.sh  options.sh  run.sh  show_results.sh
ANYA2/: CMakeLists.txt
ANYA2/include/ANYA2/: ANYA2.hpp  node.hpp
ANYA2/src/: ANYA2.cpp  main.cpp
P2D/: CMakeLists.txt
P2D/include/P2D/: P2D.hpp  Vec2.hpp  _debugoptions.hpp  debug.hpp  dir_idx.hpp  grid.hpp  list.hpp  los.hpp  los_advanced.hpp  math.hpp  openlist.hpp  scenarios.hpp  types.hpp
P2D/scripts/: .gitignore  compare_costs.py  compare_results.py  dbg.m  dbg2.m  get_scenario.m  get_scenarios.m  los2_gen.m  parse_maps.m  results.m  scale_map_twice.m  scenario.py  show_results.py
P2D/src/: P2D.cpp
R2/: CMakeLists.txt
R2/include/R2/: R2.hpp  corner.hpp  los.hpp  node.hpp  openlist.hpp  query.hpp  ray.hpp  traceinfo.hpp  tracestatus.hpp  types.hpp  unit.hpp
R2/src/: R2.cpp  caster.cpp  checks.cpp  corner.cpp  node.cpp  query.cpp  ray.cpp  traceinfo.cpp  tracer.cpp  types.cpp  unit.cpp
R2S/: CMakeLists.txt
R2S/include/R2S/: R2S.hpp  corner.hpp  trace.hpp
TS2/: CMakeLists.txt
TS2/include/TS2/: TS2.hpp  node.hpp
TS2/src/: TS2.cpp  debug.cpp  main.cpp
VG2/: CMakeLists.txt
VG2/include/VG2/: VG2.hpp  los.hpp  node.hpp  openlist.hpp
VG2/src/: VG2.cpp  main.cpp
data/bg512/: AR0014SR_scale2.map  AR0014SR_scale2.map.scen  AR0205SR_scale2.map  AR0205SR_scale2.map.scen  AR0304SR_scale2.map  AR0304SR_scale2.map.scen  AR0504SR_scale2.map  AR0504SR_scale2.map.scen  AR0602SR_scale2.map  AR0602SR_scale2.map.scen  AR0603SR_scale2.map  AR0603SR_scale2.map.scen  AR0702SR_scale2.map  AR0702SR_scale2.map.scen  AR0709SR_scale2.map  AR0709SR_scale2.map.scen
data/da2/: .gitignore  ht_0_hightown_scale2.map  ht_0_hightown_scale2.map.scen  ht_mansion2b_scale2.map  ht_mansion2b_scale2.map.scen
data/dao/: arena_scale2.map  arena_scale2.map.scen  hrt201n_scale2.map  hrt201n_scale2.map.scen
data/random/: .gitignore  random512-10-1_scale2.map  random512-10-1_scale2.map.scen
data/room/: 16room_000_scale2.map  16room_000_scale2.map.scen  32room_000_scale2.map  32room_000_scale2.map.scen
data/street/: Denver_2_1024_scale2.map.scen  NewYork_0_1024_scale2.map.scen  Shanghai_0_1024_scale2.map.scen  Shanghai_2_1024_scale2.map.scen  Sydney_1_1024_scale2.map.scen
data/wc3maps512/: .gitignore
include/RR2star/: RR2star.hpp  Vec2.hpp  grid.hpp  math.hpp  scenarios.hpp
pathfinding/: .gitignore
run/: CMakeLists.txt  main.cpp
src/: main.cpp
